--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,16 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: none;
+}
+
+.background {
+    width: 100%;
+    height: 85%;
+    background-color: #66CEA4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
 }
