Feat: criação do Menu

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,10 +7,26 @@
     justify-content: center;
     position: relative;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
+    z-index: 2;
+}
+
+.header svg {
+    position: absolute;
+    top: auto;
+    left: 50px;
+    font-size: 40px;
+    cursor: pointer;
+    color: #07433C;
+    transition: all .2s ease-in-out;
+}
+
+.header svg:hover {
+    color: #f4eded;
 }
 
 .header h1 {
     color: #07433C;
+    cursor: pointer;
 }
 
 .header img {
