--- a/src/routes/trace-table/TraceTable.css
+++ b/src/routes/trace-table/TraceTable.css
@@ -1,32 +1,55 @@
+.trace-table-container {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+}
 
 .trace-table {
-  background: #ffffff;
-  border-radius: 15px;
-  padding: 20px;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-  width: 80%;
+  width: 60%;
   max-width: 800px;
+  min-height: 300px;
   animation: fadeIn 0.8s ease-in-out;
 }
 
 .disabled-cell {
-  background-color: black;
+  background-color: #07433C;
+  width: 100%;
+  height:100%;
+  border-radius: 10px;
+}
+
+.image-container {
+  width: 40%;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 3em;
+  flex-direction: column;
+  background-color: #07433C;
+  min-height: 300px;
+  padding: 55px 30px;
   color: white;
-  text-align: center;
-  padding: 19px;
-  border-radius: 5px;
-  font-weight: bold;
+  font-weight: 100;
+  border-radius: 10px;
+}
+
+.exercise-image {
+  width: 400px;
+  object-fit: cover;
 }
 
 table {
   width: 100%;
-  border-collapse: collapse;
+  min-height: 350px;
+  height: auto;
+  border-spacing: 4px;
   font-family: "Arial", sans-serif;
   text-align: center;
 }
 
 thead {
-  background-color: #4caf50;
   color: white;
   text-transform: uppercase;
   font-size: 1rem;
@@ -34,24 +57,30 @@ thead {
 
 th,
 td {
-  padding: 15px;
+  width: 70px;
+  height: 70px;
   text-align: center;
+  background-color: #07433C;
+  border-radius: 10px;
 }
 
 
 td:first-child {
   font-weight: bold;
-  background-color: #e0f7fa;
+  color: white;
+  font-size: 1.3em;
 }
 
 
 input {
   width: 100%;
+  height: 100%;
   padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
+  border-radius: 7px;
+  border: 1px solid white;
   text-align: center;
   transition: 0.3s;
+  font-size: 1.3em;
 }
 
 
@@ -67,20 +96,28 @@ input.success {
   background-color: #e6ffe6;
 }
 
-
-button {
-  margin-top: 20px;
-  background-color: #28a745;
-  color: white;
-  padding: 10px 20px;
-  font-size: 1rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.btn-container {
+ width: 100%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
 }
 
-button:hover {
+.btn-container button {
+  margin-top: 20px;
+  background-color: #07433C;
+  color: white;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: 100;
+}
+
+.btn-container button:hover {
   background-color: #218838;
 }
 
@@ -115,7 +152,6 @@ button:hover {
 
 
 .success {
-  margin-top: 10px;
   color: green;
   font-weight: bold;
 }
