--- a/src/routes/trace-table/TraceTable.css
+++ b/src/routes/trace-table/TraceTable.css
@@ -1,3 +1,22 @@
+html,
+body {
+  height: 100%;
+  overflow-y: auto;
+  background-color: #66cea4;
+}
+
+.background-trace {
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  position: relative;
+  padding: 20px;
+}
+
 .trace-table-container {
   width: 80%;
   display: flex;
@@ -7,16 +26,14 @@
 }
 
 .trace-table {
-  width: 60%;
-  max-width: 800px;
-  min-height: 300px;
+  width: 100%;
   animation: fadeIn 0.8s ease-in-out;
 }
 
 .disabled-cell {
-  background-color: #07433C;
+  background-color: #07433c;
   width: 100%;
-  height:100%;
+  height: 100%;
   border-radius: 10px;
 }
 
@@ -27,7 +44,7 @@
   justify-content: center;
   gap: 3em;
   flex-direction: column;
-  background-color: #07433C;
+  background-color: #07433c;
   min-height: 300px;
   padding: 55px 30px;
   color: white;
@@ -47,6 +64,7 @@ table {
   border-spacing: 4px;
   font-family: "Arial", sans-serif;
   text-align: center;
+  overflow-y: auto;
 }
 
 thead {
@@ -60,17 +78,15 @@ td {
   width: 70px;
   height: 70px;
   text-align: center;
-  background-color: #07433C;
+  background-color: #07433c;
   border-radius: 10px;
 }
-
 
 td:first-child {
   font-weight: bold;
   color: white;
   font-size: 1.3em;
 }
-
 
 input {
   width: 100%;
@@ -83,13 +99,11 @@ input {
   font-size: 1.3em;
 }
 
-
 input.error {
   border-color: red;
   background-color: #ffe6e6;
   animation: shake 0.5s ease-in-out;
 }
-
 
 input.success {
   border-color: green;
@@ -97,15 +111,16 @@ input.success {
 }
 
 .btn-container {
- width: 100%;
- display: flex;
- align-items: center;
- justify-content: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .btn-container button {
   margin-top: 20px;
-  background-color: #07433C;
+  background-color: #07433c;
   color: white;
   padding: 10px 30px;
   border: none;
@@ -120,7 +135,6 @@ input.success {
 .btn-container button:hover {
   background-color: #218838;
 }
-
 
 @keyframes shake {
   0% {
@@ -140,7 +154,6 @@ input.success {
   }
 }
 
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -149,7 +162,6 @@ input.success {
     opacity: 1;
   }
 }
-
 
 .success {
   color: green;
