--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -18,3 +18,19 @@
     background-color: #fff;
     color: #07433C;
 }
+
+@media(max-width:780px) {
+    .button {
+        width: 280px;
+        height: 80px;
+        font-size: 1.5em;
+    }
+}
+
+@media(max-width:550px) {
+    .button {
+        width: 220px;
+        height: 60px;
+        font-size: 1.4em;
+    }
+}
