--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,5 +1,5 @@
 .menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 250px;
@@ -9,15 +9,25 @@
   flex-direction: column;
   padding: 20px;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  gap: 2em;
+}
+
+.container-back-btn {
+  width: 100%;
+  height: 40px;
+  position: relative;
 }
 
 .back-btn {
-  width: 100%;
-  height: 40px;
-  margin-left: 1em;
-  fill: #fff;
+  color: #fff;
   cursor: pointer;
   transition: transform 0.3s ease;
+  font-size: 1.8em;
+  font-weight: bold;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .back-btn:hover {
@@ -27,9 +37,7 @@
 .menu-itens {
   display: flex;
   flex-direction: column;
-  gap: 1em;
-  margin-top: 60px;
-  margin-bottom: 2em;
+  gap: 1.5em;
 }
 
 .menu-itens a {
@@ -46,4 +54,36 @@
 .menu-itens a:hover {
   background-color: #66bb6a;
   transform: scale(1.05);
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .menu {
+    padding: 15px;
+  }
+
+  .back-btn {
+    font-size: 1.8rem; 
+    margin: 10px 0;
+  }
+
+  .menu-itens a {
+    font-size: 1.2em;
+    padding: 8px;
+  }
+}
+
+@media (max-width: 480px) {
+  .menu {
+    width: 200px;
+  }
+
+  .back-btn {
+    font-size: 1.6rem;
+  }
+
+  .menu-itens a {
+    font-size: 1.1em;
+    padding: 7px;
+  }
 }
