--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,55 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-decoration: none;
 }
 
 .background {
-    width: 100%;
-    height: 85%;
-    background-color: #66CEA4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-    position: relative;
+  width: 100%;
+  height: 85%;
+  background-color: #66cea4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  position: relative;
 }
 
 .title {
-    width: 50%;
-    background-color: #07433C;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-    border-radius: 20px;
-    text-transform: uppercase;
-    position: absolute;
-    top: 70px;
+  background-color: #07433c;
+  color: #fff;
+  padding: 20px 80px;
+  text-align: center;
+  border-radius: 20px;
+  text-transform: uppercase;
+  position: absolute;
+  top: 40px;
 }
 
 .container-data {
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-    overflow: auto;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  padding: 10px;
+}
+
+@media (max-width: 780px) {
+  .title {
+    position: static;
+    margin-top: 1em;
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 550px) {
+  .title {
+    width: 90%;
+    font-size: 1.2em;
+  }
 }
