--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --primary-blue: #15C0CC;
+  --secondary-blue: #0E959A;
+  --primary-white: #eee;
+  --primary-green: #013E40;
+  --primary-black: #2A2B2E;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +17,7 @@
 .background {
   width: 100%;
   height: 85%;
-  background-color: #66cea4;
+  background-color: var(--primary-blue);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,7 +27,7 @@
 }
 
 .title {
-  background-color: #07433c;
+  background-color: var(--primary-green);
   color: #fff;
   padding: 20px 80px;
   text-align: center;
