--- a/src/routes/trace-table/TraceTable.css
+++ b/src/routes/trace-table/TraceTable.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100%;
   overflow-y: auto;
-  background-color: #66cea4;
+  background-color: var(--primary-blue);
 }
 
 .background-trace {
@@ -31,7 +31,7 @@ body {
 }
 
 .disabled-cell {
-  background-color: #07433c;
+  background-color: var(--primary-green);
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -44,10 +44,9 @@ body {
   justify-content: center;
   gap: 3em;
   flex-direction: column;
-  background-color: #07433c;
+  background-color: var(--primary-white);
   min-height: 300px;
   padding: 55px 30px;
-  color: white;
   font-weight: 100;
   border-radius: 10px;
   animation: fadeIn 0.8s ease-in-out;
@@ -80,7 +79,7 @@ td {
   width: 70px;
   height: 70px;
   text-align: center;
-  background-color: #07433c;
+  background-color: var(--primary-green);
   border-radius: 10px;
 }
 
