--- a/src/routes/trace-table/TraceTable.css
+++ b/src/routes/trace-table/TraceTable.css
@@ -28,6 +28,7 @@ body {
 .trace-table {
   width: 100%;
   animation: fadeIn 0.8s ease-in-out;
+  overflow: auto;
 }
 
 .disabled-cell {
@@ -83,6 +84,10 @@ td {
   border-radius: 10px;
 }
 
+th {
+  padding: 0px 8px;
+}
+
 td:first-child {
   font-weight: bold;
   color: white;
@@ -118,6 +123,7 @@ input.success {
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
+  gap: 2em;
 }
 
 .btn-container button {
@@ -136,6 +142,15 @@ input.success {
 
 .btn-container button:hover {
   background-color: #218838;
+}
+
+.btn-container button svg {
+  font-size: 1.3em;
+}
+
+.success {
+  color: green;
+  font-weight: bold;
 }
 
 @keyframes shake {
@@ -165,11 +180,6 @@ input.success {
   }
 }
 
-.success {
-  color: green;
-  font-weight: bold;
-}
-
 @media(max-width: 1000px) {
   .trace-table-container {
     width: 100%;
@@ -177,12 +187,16 @@ input.success {
   }
 
   table {
-    border-spacing: 1px;
+    border-spacing: 2px;
   }
 }
 
-@media(max-width: 450px) {
+@media(max-width: 550px) {
   .image-container {
     min-width: 90%;
+  }
+
+  th {
+    font-size: .9em;
   }
 }
