--- a/src/routes/trace-table/TraceTable.css
+++ b/src/routes/trace-table/TraceTable.css
@@ -199,4 +199,13 @@ input.success {
   th {
     font-size: .9em;
   }
+
+  .btn-container {
+    gap: .5em;
+  }
+
+  .btn-container button {
+    font-size: 1.1em;
+    padding: 10px 20px;
+  }
 }
