--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,36 +1,60 @@
 .button {
-    width: 354px;
-    height: 100px;
+    width: 230px;
+    height: 80px;
+    font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--primary-green);
     color: #fff;
-    border-radius: 80px;
+    border-radius: 10px;
     border: none;
-    font-size: 2em;
+    font-size: 1.1rem;
+    line-height: 25px;
     cursor: pointer;
     transition: all .2s ease-in-out;
-    text-transform: uppercase;
 }
 
 .button:hover {
     background-color: #fff;
-    color: #07433C;
+    color: var(--primary-green);
 }
 
-@media(max-width:780px) {
+@media (max-width: 1025px) {
     .button {
-        width: 280px;
-        height: 80px;
-        font-size: 1.5em;
+        width: 90%;
+        height: 100px;
+        max-width: 500px;
+        font-size: 1.5rem;
     }
 }
 
-@media(max-width:550px) {
+@media (max-width: 850px) {
     .button {
-        width: 220px;
-        height: 60px;
-        font-size: 1.4em;
+        width: 90%;
+        height: 80px;
+        max-width: 380px;
+        font-size: 1.3rem;
+    }
+}
+
+@media (max-width: 780px) {
+    .button {
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 550px) {
+    .button {
+        width: 95%;
+        max-width: 230px;
+        font-size: 1.1rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .button {
+        max-width: 220px;
+        font-size: 1rem;
     }
 }
