--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -1,13 +1,6 @@
 .home-title {
-    position: absolute;
-    top: 60px;
-    font-size: 2rem;
-    font-weight: bold;
-    color: var(--primary-green);
+    font-size: 1.6rem;
+    color: var(--primary-black);
     text-align: center;
     margin-bottom: 20px;
-    line-height: 1.5;
-    background-color: var(--primary-white);
-    border-radius: 10px;
-    padding: 10px 20px;
 }
