--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -17,14 +17,15 @@
   width: 100%;
   height: 40px;
   position: relative;
+  margin-bottom: 15px;
 }
 
 .back-btn {
   color: #fff;
   cursor: pointer;
   transition: transform 0.3s ease;
-  font-size: 1.8em;
-  font-weight: bold;
+  font-size: 1.8rem;
+  font-weight: 600;
   position: absolute;
   top: 0;
   right: 0;
@@ -37,12 +38,12 @@
 .menu-itens {
   display: flex;
   flex-direction: column;
-  gap: 1.5em;
+  gap: 1.1rem;
 }
 
 .menu-itens a {
-  font-size: 1.3em;
-  color: #07433c;
+  font-size: 1.1rem;
+  color: var(--primary-green);
   background-color: #fff;
   text-align: center;
   padding: 10px;
@@ -52,38 +53,25 @@
 }
 
 .menu-itens a:hover {
-  background-color: var(--primary-blue);
-  transform: scale(1.05);
+  background-color: var(--primary-green);
+  color: #fff;
 }
 
-/* Responsividade */
-@media (max-width: 768px) {
-  .menu {
-    padding: 15px;
-  }
-
-  .back-btn {
-    font-size: 1.8rem;
-    margin: 10px 0;
-  }
-
-  .menu-itens a {
-    font-size: 1.2em;
-    padding: 8px;
-  }
-}
-
-@media (max-width: 480px) {
+@media (max-width: 700px) {
   .menu {
     width: 200px;
   }
 
   .back-btn {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
+  }
+
+  .menu-itens {
+    gap: 1.2rem;
   }
 
   .menu-itens a {
-    font-size: 1.1em;
-    padding: 7px;
+    font-size: 1rem;
+    padding: 8px;
   }
 }
