--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,20 @@
 }
 
 .background {
-  width: 100%;
   height: 85%;
   background-color: var(--primary-blue);
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.center-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  padding: 1em;
   gap: 1em;
-  position: relative;
 }
 
 .container-data {
