--- a/src/components/alertBox/AlertBox.css
+++ b/src/components/alertBox/AlertBox.css
@@ -15,7 +15,7 @@
 .alert-content {
     width: 300px;
     height: 150px;
-    background-color: #fff;
+    background-color: var(--primary-white);
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
@@ -35,7 +35,7 @@
 }
 
 .alert-button {
-    background-color: #4caf50;
+    background-color: var(--primary-green);
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -46,7 +46,7 @@
 }
 
 .alert-button:hover {
-    background-color: #45a049;
+     background: #026164;
 }
 
 @keyframes fadeIn {
