--- a/src/components/selectCode/SelectCode.css
+++ b/src/components/selectCode/SelectCode.css
@@ -12,7 +12,8 @@
 }
 
 .select-code-content {
-    background: #fff;
+    background: var(--primary-white);
+    border-top: 5px solid var(--primary-green);
     padding: 20px 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -29,21 +30,22 @@
     text-align: end;
     background: transparent;
     border: none;
-    font-size: 2em;
+    font-size: 20px;
     font-weight: bold;
-    color: #333;
+    color: var(--primary-black);
     cursor: pointer;
     margin-bottom: .5em;
+    opacity: 0.6;
 }
 
 .close-button:hover {
-    color: #ff0000;
+    opacity: 1;
 }
 
 .select-code-content h2 {
     margin-bottom: 20px;
     font-size: 18px;
-    color: #333;
+    color: var(--primary-black);
 }
 
 .select-code-content input {
@@ -58,14 +60,15 @@
 .insert-button {
     width: 100%;
     padding: 10px;
-    background: #007bff;
+    background: var(--primary-green);
     color: #fff;
     border: none;
     border-radius: 4px;
     font-size: 14px;
+    font-weight: 600;
     cursor: pointer;
 }
 
 .insert-button:hover {
-    background: #0056b3;
+    background: #026164;
 }
