--- a/src/routes/about/About.css
+++ b/src/routes/about/About.css
@@ -1,41 +1,50 @@
-.about-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-family: Arial, sans-serif;
-  color: #333;
+.wrapper {
+  max-width: 900px;
+  width: 90%;
+  background-color: var(--primary-white);
   padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  margin: .8rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about-section {
-  width: 800px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 2em;
-  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.container-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1.2rem;
 }
 
 .about-image {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
   object-fit: cover;
-  border: 5px solid white;
+  border: 2px solid var(--primary-green);
 }
 
-.about-container p {
+.about-section p {
+  padding: 0 10px;
   text-align: justify;
-  font-size: 1.3em;
+  font-size: 1.3rem;
   line-height: 1.3;
-  margin-bottom: 1em;
-  color: white;
+  color: var(--primary-black);
 }
 
-.about-container strong {
-  color: #0056b3;
+.about-section span {
+  color: var(--secondary-blue);
 }
 
 @media(max-width: 900px) {
@@ -43,7 +52,13 @@
     width: 95%;
   }
 
-  .about-container p {
+  .about-section p {
     font-size: 1.1em;
+  }
+}
+
+@media(max-width: 500px) {
+  .about-section p {
+    font-size: .9em;
   }
 }
