--- a/src/routes/about/About.css
+++ b/src/routes/about/About.css
@@ -11,54 +11,49 @@
   align-items: center;
 }
 
-.about-section {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin-bottom: 2rem;
+.description {
+    padding: 0 15px;
+    text-align: justify;
+    font-size: 1.3rem;
+    line-height: 1.3;
+    margin-bottom: 1rem;
+    color: var(--primary-black);
+    margin-top: 1rem;
 }
 
-.container-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1.2rem;
+.description span {
+    color: var(--secondary-blue);
 }
 
-.about-image {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  margin-bottom: 1rem;
-  object-fit: cover;
-  border: 2px solid var(--primary-green);
+@media (max-width: 1025px) {
+    .wrapper {
+        padding: 20px;
+    }
 }
 
-.about-section p {
-  padding: 0 10px;
-  text-align: justify;
-  font-size: 1.3rem;
-  line-height: 1.3;
-  color: var(--primary-black);
+@media (max-width: 900px) {
+    .wrapper {
+        padding: 15px;
+    }
+
+    .description {
+        font-size: 1.1rem;
+    }
 }
 
-.about-section span {
-  color: var(--secondary-blue);
+@media (max-width: 600px) {
+    .wrapper {
+        width: 90%;
+        padding: 10px;
+    }
+
+    .description {
+        font-size: 1rem;
+    }
 }
 
-@media(max-width: 900px) {
-  .about-section {
-    width: 95%;
-  }
-
-  .about-section p {
-    font-size: 1.1em;
-  }
-}
-
-@media(max-width: 500px) {
-  .about-section p {
-    font-size: .9em;
-  }
+@media (max-width: 400px) {
+    .description {
+        font-size: .9rem;
+    }
 }
