--- a/src/components/feedback-box/FeedbackBox.css
+++ b/src/components/feedback-box/FeedbackBox.css
@@ -4,12 +4,14 @@
   top: 50%;
   left: 80%;
   transform: translateX(-50%);
-  background-color: white;
+  background-color: var(--primary-white);
+  border: 2px solid var(--secondary-blue);
+  border-top-width: 5px;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   opacity: 0;
-  animation: slideDown 5s ease-in-out forwards;
+  animation: slideDown 10s ease-in-out forwards;
   text-align: center;
   z-index: 5;
 }
@@ -33,14 +35,22 @@
   }
 }
 
-.feedback-box.green {
-  background-color: #4caf50;
-  color: white;
+.green,
+.yellow,
+.red {
+  font-weight: bold;
 }
 
-.feedback-box.red {
-  background-color: #f44336;
-  color: white;
+.green {
+  color: #1e8000;
+}
+
+.yellow {
+  color: #ca9c03;
+}
+
+.red {
+  color: #bd0000;
 }
 
 .feedback-box p {
