--- a/src/routes/trace-table/TraceTable.css
+++ b/src/routes/trace-table/TraceTable.css
@@ -32,13 +32,6 @@ body {
   overflow: auto;
 }
 
-.disabled-cell {
-  background-color: var(--primary-green);
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-}
-
 .exercise-info {
   display: flex;
   align-items: center;
@@ -70,9 +63,9 @@ body {
   animation: fadeIn 0.8s ease-in-out;
 }
 
- .image-container h2 {
-    font-size: 2rem;
-  }
+.image-container h2 {
+  font-size: 2rem;
+}
 
 .exercise-image {
   width: 100%;
@@ -108,9 +101,22 @@ th {
   padding: 0px 8px;
 }
 
+th.metadata-column {
+  background-color: #a8d2d3;
+  color: var(--primary-green);
+}
+
+td.metadata-column {
+  background-color: #dee8e9;
+  color: var(--primary-black);
+}
+
 .step-cell {
   font-weight: bold;
-  color: white;
+}
+
+.disabled-cell {
+  background-color: var(--primary-green);
 }
 
 input {
@@ -123,6 +129,11 @@ input {
   transition: 0.3s;
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+.metadata-column input {
+  background-color: #dee8e9;
+  color: var(--primary-black);
 }
 
 input.error {
@@ -240,7 +251,7 @@ input.type-error {
   }
 }
 
-@media(max-width: 1450px)  {
+@media(max-width: 1230px) {
   .trace-table-container {
     width: 95%;
     flex-direction: column;
@@ -266,7 +277,16 @@ input.type-error {
   }
 
   .image-container h2 {
-    font-size: 1.5rem;
+    font-size: 1rem;
+  }
+
+  th,
+  td {
+    font-size: 10px;
+  }
+
+  input {
+    font-size: 10px;
   }
 
   .btn-container {
@@ -276,10 +296,5 @@ input.type-error {
   .btn-container button {
     font-size: 1.1em;
     padding: 10px 20px;
-  }
-
-  table,
-  input {
-    font-size: .9rem;
   }
 }
