Feat: bloqueando células que já vem preenchidas da api

--- a/src/routes/trace-table/TraceTable.css
+++ b/src/routes/trace-table/TraceTable.css
@@ -93,12 +93,16 @@ td {
   width: 70px;
   height: 70px;
   text-align: center;
-  background-color: var(--primary-green);
   border-radius: 10px;
 }
 
 th {
   padding: 0px 8px;
+  background-color: var(--primary-green);
+}
+
+td {
+  background-color: #fff;
 }
 
 th.metadata-column {
