Style: melhorando o posicionamento do popUp de feedback

--- a/src/components/feedback-box/FeedbackBox.css
+++ b/src/components/feedback-box/FeedbackBox.css
@@ -1,9 +1,8 @@
 .feedback-box {
   width: 250px;
-  position: absolute;
-  top: 50%;
-  left: 80%;
-  transform: translateX(-50%);
+  position: fixed;
+  top: 40px;   
+  right: 20px;    
   background-color: var(--primary-white);
   border: 2px solid var(--secondary-blue);
   border-top-width: 5px;
@@ -55,11 +54,4 @@
 
 .feedback-box p {
   font-size: 1.1em;
-}
-
-@media (max-width: 550px) {
-  .feedback-box {
-    top: 0;
-    left: 50%;
-  }
 }
