--- a/src/routes/trace-table/TraceTable.css
+++ b/src/routes/trace-table/TraceTable.css
@@ -82,6 +82,7 @@ table {
   text-align: center;
   overflow-y: auto;
   font-size: 1.2rem;
+  font-weight: bold;
 }
 
 thead {
@@ -195,7 +196,6 @@ input.type-error {
   transition: background-color 0.3s ease;
   text-transform: uppercase;
   font-size: 1.5em;
-  font-weight: 100;
 }
 
 .btn-container button:hover:not(.btn-submit),
